# spark-internals

./: .gitignore  Dockerfile  Dockerfile.jupyterlab  Makefile  README.md  docker-compose.yml  entrypoint-jupyter.sh  entrypoint.sh  pyproject.toml
conf/: log4j.properties  spark-defaults.conf
notebooks/: repartition_and_partitioning.ipynb  shuffle_in_groupBy.ipynb
